fix spacing between pages and slow down background animation

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,10 @@ html {
   scroll-behavior: smooth;
 }
 
+body {
+  margin: 0;
+}
+
 #navbar {
   height: 1.5rem;
   width: 100vw;
@@ -41,11 +45,11 @@ html {
   height: 1.5rem;
 }
 
-.closed {
+#navbar .closed {
   display: none;
 }
 
-.open {
+#navbar .open {
   display: inline;
 }
 
@@ -107,16 +111,14 @@ html {
 }
 
 #back-building-img {
-  left: 100px;
-  transform: translate(50px);
+  transform: translate(5px);
   filter: blur(1px);
 }
 
 #mid-building-img {
   filter: blur(0.5px);
   top: -100vh;
-  left: 50px;
-  transform: translate(25px);
+  transform: translate(2px);
 }
 
 #front-building-img {
@@ -165,10 +167,6 @@ html {
   margin: 0;
 }
 
-body {
-  margin: 0;
-}
-
 .section-title {
   margin: 0;
   padding: 3rem;
@@ -181,7 +179,7 @@ body {
 
 .content-section {
   background-color: #373b7e;
-  height: 60vh;
+  padding-bottom: 10rem;
 }
 
 .content-section p {
@@ -238,7 +236,6 @@ body {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  height: 45vh;
   width: 100vw;
 }
 
